--- a/WTFCaveBiomes/.classpath
+++ b/WTFCaveBiomes/.classpath
@@ -6,8 +6,8 @@
 	<classpathentry kind="src" path="/Forge"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WTFCore"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/UBC"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Et-Futurum-master"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Wayne/.gradle/caches/minecraft/net/minecraftforge/forge/1.7.10-10.13.4.1492-1.7.10/forgeSrc-1.7.10-10.13.4.1492-1.7.10.jar" sourcepath="C:/Users/Wayne/.gradle/caches/minecraft/net/minecraftforge/forge/1.7.10-10.13.4.1492-1.7.10/forgeSrc-1.7.10-10.13.4.1492-1.7.10-sources.jar"/>
+	<classpathentry kind="lib" path="libs/Et Futurum-1.1.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/TextureGenerator"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WTFTweaks"/>
 	<classpathentry kind="output" path="bin"/>
